@@ -118,8 +118,8 @@ bool LWRPServer::ExecuteVer(int id,QStringList &args)
 {
   SendCommand(id,QString().
      sprintf("VER LWRP:%s DEVN:\"%s\" SYSV:%s NSRC:%u/2 NDST:%u NGPI:0 NGPO:0",
-	     SWITCHYARD_PROTOCOL_VERSION,SWITCHYARD_DEVICE_NAME,VERSION,
-	     SWITCHYARD_SLOTS,SWITCHYARD_SLOTS));
+	     SWITCHYARD_PROTOCOL_VERSION,SWITCHYARD_DEVICE_NAME,
+	     SWITCHYARD_VERSION,SWITCHYARD_SLOTS,SWITCHYARD_SLOTS));
   return true;
 }
 
